--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="pt">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/volleyball-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sorteador de Voleibol</title>
     <meta name="description" content="Aplicativo para sortear times de voleibol e gerenciar placar" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="apple-touch-icon" href="/volleyball-icon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="mobile-web-app-capable" content="yes" />
