Rename project from "Volleyball Sorter" to "Próxima Jogada" and update related metadata.
- Change title and description in index.html and vite.config.ts
- Update README with new project name and repository link
- Modify app header and offline fallback messages to reflect new branding
- Update package.json name and add new dev dependencies for prettier plugins

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sorteador de Voleibol</title>
-    <meta name="description" content="Aplicativo para sortear times de voleibol e gerenciar placar" />
+    <title>Próxima Jogada</title>
+    <meta name="description" content="Aplicativo para sortear times de forma rápida e simples." />
     <meta name="theme-color" content="#ffffff" />
     <link rel="apple-touch-icon" href="/favicon.svg" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
