--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
   </head>
   <body>
+    <noscript>Please enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
